Adds the session and direction options to the driver options

--- a/public/rtcMulti/index.vwf.config.yaml
+++ b/public/rtcMulti/index.vwf.config.yaml
@@ -16,4 +16,4 @@ model:
   vwf/model/threejs:
 view:
   vwf/view/threejs: "#vwf-root"
-  vwf/view/rtcMulti: {  }
+  vwf/view/rtcMulti: { "session": { "audio": true, "video": true }, "direction": "many-to-many"  }
