First working version of the rtcMulti driver along with the connection component
Task 2814 and 2809

--- a/support/proxy/vwf.example.com/rtcMulti/connection.vwf.yaml
+++ b/support/proxy/vwf.example.com/rtcMulti/connection.vwf.yaml
@@ -163,7 +163,7 @@ properties:
   maxFramerate: 60
 
   ## userid definition.  
-  ## Custom user id which will be set to the moniker for the application instance 
+  ## Connection user id, defined by the RTCMultiConnection object  
   ##
   ## @name connection.vwf#userid
   ## @property
