try pooling arrays

--- a/public/adl/sandbox/index.vwf.yaml
+++ b/public/adl/sandbox/index.vwf.yaml
@@ -301,8 +301,8 @@ scripts:
          if(this.id == 'Scene-vwf') return;
           this.prerendercallback = this.prerender.bind(this);
           this.postrendercallback = this.postrender.bind(this);
-          $(document).bind('prerender',this.prerendercallback);
-          $(document).bind('postprerender',this.postrendercallback);
+          _dView.bind('prerender',this.prerendercallback);
+          _dView.bind('postprerender',this.postrendercallback);
           this.createNameTag();
           this.updateCamera();
     }
@@ -1215,13 +1215,14 @@ scripts:
     }
     this.deinitialize = function()
     {
-       $(document).unbind('prerender',this.prerendercallback);
-       $(document).unbind('postprerender',this.postrendercallback);
+       _dView.unbind('prerender',this.prerendercallback);
+       _dView.unbind('postprerender',this.postrendercallback);
        $(this.nametag).remove();
     }
     this.prerender = function()
     {
         
+       
         if(this.cameramode == 'Fly')
         { 
             var dist = window.deltaTime/(this.flyspeed * 30.0);
@@ -1244,8 +1245,10 @@ scripts:
         
         
         this.updateCamera();
+        this.updateCamera();
     }
-   
+    this.tempmatrix = (new THREE.Matrix4());
+    this.lightvec = new THREE.Vector3(0,0,-3);
     this.postrender = function(e,viewprojection, wh, ww)
     {
         //set the skybox position
@@ -1299,11 +1302,14 @@ scripts:
       {
        
       
-       var campos = findcamera().localToWorld(new THREE.Vector3(0,0,-3));
+       this.lightvec.x = 0;
+       this.lightvec.y = 0;
+       this.lightvec.z = -3;
+       var campos = findcamera().localToWorld(this.lightvec);
        
        this.sun.shadowCamera.updateMatrixWorld(true)
         var lm = this.sun.shadowCamera.matrixWorld.clone();
-        lm = (new THREE.Matrix4()).getInverse(lm);
+        lm = this.tempmatrix.getInverse(lm);
         var camposLS = campos.applyMatrix4(lm);
         
        
