--- a/public/adl/sandbox/character.vwf.yaml
+++ b/public/adl/sandbox/character.vwf.yaml
@@ -428,6 +428,7 @@ scripts:
                         finalt = MATH.addVec3(finalt,R);
                     }
                 }
+                _DEALLOC(intersectfront);
                 var falldist = 1000;
                
                 var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,1.7]),[0,0,-1],{filter:function(o){ return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.skin,_Editor.GetMoveGizmo()]});
@@ -462,6 +463,7 @@ scripts:
                     }
                     
                 }
+                _DEALLOC(intersect);
                 this.skin.PickPriority = 1;
                 
             }
@@ -488,6 +490,7 @@ scripts:
                         this.jumpcounter  = 0;
                     }
                 }
+                _DEALLOC(intersect);
                 this.skin.PickPriority = 1;
             }
             
