faster by using an integer key for the pool types

--- a/public/adl/sandbox/character.vwf.yaml
+++ b/public/adl/sandbox/character.vwf.yaml
@@ -296,10 +296,10 @@ scripts:
         
         var motionvec;
         
-        if(this.motionStack.length)
-            this.playSound('./vwfDataManager.svc/datafile/sounds/footsteps.mp3',true,.1);
-        else
-            this.pauseSound('./vwfDataManager.svc/datafile/sounds/footsteps.mp3');
+        //if(this.motionStack.length)
+        //    this.playSound('./vwfDataManager.svc/datafile/sounds/footsteps.mp3',true,.1);
+        //else
+        //    this.pauseSound('./vwfDataManager.svc/datafile/sounds/footsteps.mp3');
         
         for(var i=0; i < this.motionStack.length; i++)
         {
