--- a/public/adl/sandbox/character.vwf.yaml
+++ b/public/adl/sandbox/character.vwf.yaml
@@ -39,7 +39,7 @@ scripts:
 
         
         if(this.id == 'character-vwf') return;
-       
+        
          this.DownKeys= [];
         // this.motionStack= [];
          this.jumpcounter = 0;
@@ -73,17 +73,7 @@ scripts:
             
           }
          
-         this.cycles = 
-            {
-                stand:{start:0,length:0,speed:1.25,current:0,loop:false},
-                walk:{start:0,length:30,speed:1.25,current:0,loop:true},
-                straferight:{start:31,length:29,speed:1.5,current:0,loop:true},
-                strafeleft:{start:31,length:29,speed:-1.5,current:0,loop:true},
-                walkback:{start:0,length:30,speed:-1.25,current:0,loop:true},
-                run:{start:60,length:30,speed:1.25,current:0,loop:true},
-                jump:{start:90,length:48,speed:1.25,current:0,loop:false},
-                runningjump:{start:109,length:48,speed:1.25,current:0,loop:false}
-            };
+        
           this.prerendercallback = this.placeNameTag.bind(this);
           _dView.bind('postprerender',this.prerendercallback);
            //this.callbacknum = findVWFscene().addUpdateCallback(this.placeNameTag.bind(this));
@@ -93,9 +83,22 @@ scripts:
           //this.mesh.sceneManagerIgnore();
          // if(!this.mesh)
            
-          this.mesh.children[0].children[0].children[0].position.z = -.85
-          this.mesh.children[0].children[0].children[0].updateMatrixWorld(true);
-          this.skin = this.mesh.children[0].children[0].children[0].children[1];
+        //  this.mesh.children[0].children[0].children[0].position.z = -.85
+        //  this.mesh.children[0].children[0].children[0].updateMatrixWorld(true);
+          
+          var findSkin = function(root)
+          {
+              if(root instanceof THREE.SkinnedMesh) return root;
+              var found = null;
+              for(var i =0; i < root.children.length; i++)
+              {
+                found = findSkin(root.children[i]);
+                if(found) return found;
+              }
+
+          }
+
+          this.skin = findSkin(this.mesh);
           this.skin.material.ambient.r = 1;
           this.skin.material.ambient.g = 1;
           this.skin.material.ambient.b = 1;
@@ -106,6 +109,7 @@ scripts:
          
           this.createNameTag(PlayerNumber);
           this.followOffset = [0,0,1.733];
+         
           this.initCycles();
         //  this.activeCycle = this.cycles.stand;
           this.updateLoopStarted = false;
@@ -123,12 +127,13 @@ scripts:
     }
     this.initCycles = function()
     {
-        for(var i in this.cycles)
+        var cycles = this.cycles.internal_val;
+        for(var i in cycles)
         {
-            this.cycles[i].getFrame = function() { 
+            cycles[i].getFrame = function() { 
                     return this.current + this.start;
-                }.bind(this.cycles[i]);
-            this.cycles[i].increment = function(steps) { 
+                }.bind(cycles[i]);
+            cycles[i].increment = function(steps) { 
                     this.current+=this.speed * steps;
                     if(this.current >= this.length && this.loop == true)
                         this.current = 0;
@@ -137,10 +142,10 @@ scripts:
                     if(this.current >= this.length && this.loop == false)
                         this.current = this.length-1;
                     return this.getFrame();
-                }.bind(this.cycles[i]);
-            this.cycles[i].reset = function() {
+                }.bind(cycles[i]);
+            cycles[i].reset = function() {
                     this.current=0;
-            }.bind(this.cycles[i]);
+            }.bind(cycles[i]);
         }
     }
     this.createNameTag = function(PlayerNumber)
@@ -152,7 +157,7 @@ scripts:
       newdiv.id = "Player " + PlayerNumber + 'label';
       newdiv.innerHTML = "" + PlayerNumber;
       newdiv.style.left = '0px';
-      newdiv.style.top = '0px';
+      //newdiv.style.top = '0px';
       
       $(document.body).append(newdiv);
       newdiv._offsetWidth = newdiv.offsetWidth;
@@ -179,7 +184,7 @@ scripts:
       var div = this.nametag;
       var pos = this.tbak;
       if(!pos) return;
-      pos = [pos[0],pos[1],pos[2]+1.620,1];
+      pos = [pos[0],pos[1],pos[2]+2,1];
          
       var screen = MATH.mulMat4Vec4(viewprojection,pos);
       screen[0] /= screen[3];
@@ -197,7 +202,7 @@ scripts:
       
       screen[1] = wh - screen[1];
 
-      div.style.top = (screen[1])  +  'px';
+      div.style.top = (screen[1]  +   $("#index-vwf").offset().top) + 'px' ;
       div.style.left = (screen[0] - div._offsetWidth/2)  +'px';
      
       
@@ -258,7 +263,7 @@ scripts:
           backupr = [0,0,1,this.rotZ/0.0174532925];
         
       
-        var standing = 1.703559666;
+        var standing = this.standing;
         if(this.activeCycle)
         {
             
@@ -408,7 +413,7 @@ scripts:
                 motionvec = motionvec ? MATH.toUnitVec3(motionvec) : [0,0,0];
                 var testpos = MATH.subVec3(finalt,MATH.scaleVec3(motionvec,-.15));
                 
-                var intersectfront = _SceneManager.CPUPick(MATH.addVec3(testpos,[0,0,1]),motionvec,{filter:function(o){return !(o.isAvatar === true || o.passable===true)},maxDist: 100,ignore:[this.skin,_Editor.GetMoveGizmo()]});
+                var intersectfront = _SceneManager.CPUPick(MATH.addVec3(testpos,[0,0,1]),motionvec,{filter:function(o){return !(o.isAvatar === true || o.passable===true)},maxDist: 100,ignore:[this.mesh,_Editor.GetMoveGizmo()]});
                 if(intersectfront)
                 {
                     if(intersectfront.distance < .3)
@@ -431,15 +436,15 @@ scripts:
                 _DEALLOC(intersectfront);
                 var falldist = 1000;
                
-                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,1.7]),[0,0,-1],{filter:function(o){ return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.skin,_Editor.GetMoveGizmo()]});
+                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,1.7]),[0,0,-1],{filter:function(o){ return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.mesh,_Editor.GetMoveGizmo()]});
               
                 
                 falldist = intersect?intersect.distance:falldist;
-                
+                console.log(falldist);
                 if(falldist && intersect)
                 {
-                   
-                    var zdiff = standing - falldist;
+                  
+                    var zdiff = (1.7 + standing) - falldist;
                     
                     var zmove = zdiff;
                     if(zdiff < -.03 )
@@ -472,17 +477,17 @@ scripts:
             if(this.inMotion('jump') && this.jumpcounter > 10)
             {
                 this.skin.PickPriority = -1;
-                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,2]),[0,0,-1],{filter:function(o){return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.skin,_Editor.GetMoveGizmo()]});
+                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,2]),[0,0,-1],{filter:function(o){return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.mesh,_Editor.GetMoveGizmo()]});
                 if(intersect)
                 {
                    
-                    var zdiff = standing - intersect.distance;
+                    var zdiff = (2+standing) - intersect.distance;
                    
                     //in this case, they've jumpped onto something
                     if(zdiff > 0.17 )
                     {
                         
-                        var zdiff = standing - intersect.distance;
+                        var zdiff = (2+standing)  - intersect.distance;
                         
                         var zmove = zdiff;
                         finalt = MATH.addVec3(finalt, [0,0,zmove]);
@@ -494,13 +499,13 @@ scripts:
                 this.skin.PickPriority = 1;
             }
             
-        
-        this.originalvelocity[2] = 0;
-        // keep track of how fast they were moving at this frame, so we can accelerate properly
-        this.originalvelocity = MATH.subVec3(finalt,originalpos);
         //permenantly clamp to z=0 plane
         if(finalt[2] < 0)
             finalt = [finalt[0],finalt[1],0];
+        
+        // keep track of how fast they were moving at this frame, so we can accelerate properly
+        this.originalvelocity = MATH.subVec3(finalt,originalpos);
+      
         //every 2 seconds, update the position and rotation that tend to run out of sync
         //note that we could change the update mechanism to avoid getting out of sync
         if(this.updatecounter > 180 && document["PlayerNumber"] == this.PlayerNumber)
