added visible flag to objects, fix for objects that move when making a subnode a VWF node, avatars ignore lines

--- a/public/adl/sandbox/character.vwf.yaml
+++ b/public/adl/sandbox/character.vwf.yaml
@@ -116,6 +116,15 @@ scripts:
           var now = performance.now();
           this.lastUpdate = now;
           //window.setTimeout(function(){document[PlayerNumber +'link'].startloop();},500);
+
+
+          this.pickoptions = {
+            filter:function(o){
+                if(o instanceof THREE.Line) return false;
+                return !(o.isAvatar === true || o.passable===true)
+              },maxDist: 100,
+              ignore:[this.mesh,_Editor.GetMoveGizmo()]
+            }
     }
     this.pointerOver = function(e)
     {
@@ -413,7 +422,7 @@ scripts:
                 motionvec = motionvec ? MATH.toUnitVec3(motionvec) : [0,0,0];
                 var testpos = MATH.subVec3(finalt,MATH.scaleVec3(motionvec,-.15));
                 
-                var intersectfront = _SceneManager.CPUPick(MATH.addVec3(testpos,[0,0,1]),motionvec,{filter:function(o){return !(o.isAvatar === true || o.passable===true)},maxDist: 100,ignore:[this.mesh,_Editor.GetMoveGizmo()]});
+                var intersectfront = _SceneManager.CPUPick(MATH.addVec3(testpos,[0,0,1]),motionvec,this.pickoptions);
                 if(intersectfront)
                 {
                     if(intersectfront.distance < .3)
@@ -436,7 +445,7 @@ scripts:
                 _DEALLOC(intersectfront);
                 var falldist = 1000;
                
-                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,1.7]),[0,0,-1],{filter:function(o){ return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.mesh,_Editor.GetMoveGizmo()]});
+                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,1.7]),[0,0,-1],this.pickoptions);
               
                 
                 falldist = intersect?intersect.distance:falldist;
@@ -477,7 +486,7 @@ scripts:
             if(this.inMotion('jump') && this.jumpcounter > 10)
             {
                 this.skin.PickPriority = -1;
-                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,2]),[0,0,-1],{filter:function(o){return !(o.isAvatar === true || o.passable === true)},maxDist: 100,ignore:[this.mesh,_Editor.GetMoveGizmo()]});
+                var intersect = _SceneManager.CPUPick(MATH.addVec3(finalt,[0,0,2]),[0,0,-1],this.pickoptions);
                 if(intersect)
                 {
                    
