--- a/public/test/JSONLoaderTest/index.vwf.yaml
+++ b/public/test/JSONLoaderTest/index.vwf.yaml
@@ -25,7 +25,6 @@ children:
       scale: [0.00075, 0.00075, 0.00075]
       rotation: [-100,-100,-100,-100]
       animationLoop: true
-      fps: 10
   Avatar: 
     extends: http://vwf.example.com/node3.vwf
     implements:
@@ -37,9 +36,9 @@ children:
       rotation: [ 0, 1, 1, 180 ]
       animationLoop: false
       animationPlaying: true
-      animationType: -1
       animationRate: 1
-      fps: 30
+      animationDuration: 100
+      animationType: -1
 scripts:
 - |
   this.initialize = function() {
@@ -48,10 +47,23 @@ scripts:
     this.future( 0 ).initializeCamera();
   }
   this.pointerDown = function( pointerInfo, pickInfo ) {
-    this.Avatar.animationPlay();
-  }
+    if (++this.Avatar.animationType > 2) this.Avatar.animationType = 0;
+    switch (this.Avatar.animationType) {
+      case 0:
+        this.Avatar.animationTime = 0;
+        this.Avatar.animationPlay(0,11);
+        break;
+      case 1:
+        this.Avatar.animationPlay(11,17);
+        break;
+      case 2:
+        this.Avatar.animationPlay(17,20);
+        break;
+    }
+  }  
   this.initializeCamera = function() {
     //this.camera.near = 1;
     this.camera.translation = [5.593170642852783,-0.050479382276535034,0]; 
     this.camera.rotation = [0,0,1,90.53998565673828];
   }//@ sourceURL=index.vwf
+
