--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "socket.io": "0.9.x",
     "async": "0.2.x",
     "mime": "1.2.x",
-    "js-yaml": "2.1.x"
+    "js-yaml": "2.1.x",
+    "optimist": "0.6.x"
   },
   "devDependencies": {
     "node-inspector": "x.x.x",
