--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "author": "VWF <http://virtual.wf>",
   "scripts": {
-    "start": "node ./node-server.js",
-    "debug": "node --debug ./node-server.js",
+    "start": "node ./node-server.js --applicationPath=./public",
+    "debug": "node --debug ./node-server.js --applicationPath=./public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "directories": {
