--- a/support/proxy/vwf.example.com/morph.vwf.yaml
+++ b/support/proxy/vwf.example.com/morph.vwf.yaml
@@ -1,4 +1,4 @@
-# Copyright 2013 United States Government, as represented by the Secretary of Defense, Under
+# Copyright 2012 United States Government, as represented by the Secretary of Defense, Under
 # Secretary of Defense (Personnel & Readiness).
 # 
 # Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
@@ -11,11 +11,17 @@
 # or implied. See the License for the specific language governing permissions and limitations under
 # the License.
 
----
-info:
-  title: "VWF Duck Application"
-model:
-  vwf/model/morph:
-  vwf/model/threejs:
-view:
-  vwf/view/threejs: { "application-root": "#vwf-root" }
+## The component representation of a 2D canvas
+## 
+## @name canvas.vwf
+## @namespace
+
+--- 
+extends: http://vwf.example.com/node2.vwf
+properties:
+  shape: "rectangle"
+  translation: [10,10]
+  rotation: 0
+  opacity: 1
+  height: 20
+  width: 20
