--- a/support/proxy/vwf.example.com/morph.vwf.yaml
+++ b/support/proxy/vwf.example.com/morph.vwf.yaml
@@ -19,9 +19,10 @@
 --- 
 extends: http://vwf.example.com/node2.vwf
 properties:
-  shape: "rectangle"
-  translation: [10,10]
+  classname: "box"
+  extent: [ 100, 100 ]
+  fill: [ 0, 0, 255 ]
+  borderWidth: 3
+  position: [ 10, 10 ]
   rotation: 0
   opacity: 1
-  height: 20
-  width: 20
