Fixes a copy paste error

--- a/support/proxy/vwf.example.com/spin-on-move.vwf.yaml
+++ b/support/proxy/vwf.example.com/spin-on-move.vwf.yaml
@@ -112,7 +112,7 @@ scripts:
       if ( !this.input ) this.init();
 
       this.input.pointerDown.pointerInfo = pointerInfo;
-      this.input.pointerDown.pointerInfo = pickInfo;
+      this.input.pointerDown.pickInfo = pickInfo;
       this.input.clear();
     }
     this.pointerUp = function( pointerInfo, pickInfo ) {
