--- a/support/proxy/vwf.example.com/tools/transform/scaleXYZ.vwf.yaml
+++ b/support/proxy/vwf.example.com/tools/transform/scaleXYZ.vwf.yaml
@@ -13,6 +13,8 @@
 
 --- 
 extends: http://vwf.example.com/node3.vwf
+implements:
+- http://vwf.example.com/scale-on-move.vwf
 methods:
   createGeometry:
   deleteGeometry:
