--- a/public/test/xParent/index.vwf.yaml
+++ b/public/test/xParent/index.vwf.yaml
@@ -12,7 +12,7 @@
 # the License.
 
 --- 
-extends: http://vwf.example.com/navtouch.vwf
+extends: http://vwf.example.com/scene.vwf
 properties:
   navmode: walk
   rotationSpeed: 2
