Implements a default case that will listen to changes in x and/or y to rotate the object

--- a/support/proxy/vwf.example.com/spin-on-move.vwf.yaml
+++ b/support/proxy/vwf.example.com/spin-on-move.vwf.yaml
@@ -129,6 +129,9 @@ scripts:
         case "y":
           this.spin( -diff[1] );
           break;
+        default:
+          this.spin( Math.sqrt( ( diff[0] * diff[0] ) + ( diff[1] * diff[1] ) ) );
+          break;
       }
     }
     this.spin = function( value ){
