Uses the new rotate in x and/or y for the rotation handles

--- a/support/proxy/vwf.example.com/tools/transform/rotationY.vwf.yaml
+++ b/support/proxy/vwf.example.com/tools/transform/rotationY.vwf.yaml
@@ -21,6 +21,7 @@ methods:
 properties:
   spin-axis: [ 0, 1, 0 ]
   spin-rate: 100
+  spin-inputDim: "xy"
 scripts:
 - |
   this.initialize = function() {
