--- a/support/proxy/vwf.example.com/tools/transform/rotationZ.vwf.yaml
+++ b/support/proxy/vwf.example.com/tools/transform/rotationZ.vwf.yaml
@@ -21,6 +21,7 @@ methods:
 properties:
   spin-axis: [ 0, 0, 1 ]
   spin-rate: 100
+  spin-inputDim: "xy"
 scripts:
 - |
   this.initialize = function() {
