From another cherry-pick 2a439220c8a1b731c3a18af73d7f13aecddd3173

--- a/public/agi/test/geometry/index.vwf.config.yaml
+++ b/public/agi/test/geometry/index.vwf.config.yaml
@@ -11,26 +11,8 @@
 # or implied. See the License for the specific language governing permissions and limitations under
 # the License.
 
---- 
-extends: http://vwf.example.com/cesium.vwf
-properties:
-  backgroundColor:
-  renderStyle: "3D"
-  imageryProvider: "bingAerial"
-children:
-  camera:
-    extends: http://vwf.example.com/cesium/camera.vwf
-  earth:
-    extends: http://vwf.example.com/cesium/centralBody.vwf 
-  atmosphere: 
-    extends: http://vwf.example.com/cesium/atmosphere.vwf 
-  skybox: 
-    extends: http://vwf.example.com/cesium/skybox.vwf 
-  box:
-    extends: http://vwf.example.com/cesium/boxGeometry.vwf
-    properties:
-      color: [ 255, 0, 0, 0.5 ] 
-      position: [ -105.0, 45.0 ]
-      dimensions: [ 400000.0, 300000.0, 500000.0 ]
-
-  
+---
+model:
+  vwf/model/cesium:
+view:
+  vwf/view/cesium: { cesium: 'widget' }
