Creates two directional lights and an ambientLight if the application omits lights

--- a/support/proxy/vwf.example.com/scene.vwf.yaml
+++ b/support/proxy/vwf.example.com/scene.vwf.yaml
@@ -59,8 +59,8 @@ properties:
   ## @name scene.vwf#ambientColor
   ## @property
 
-  ambientColor: [ 50, 50, 50 ]
-
+  ambientColor: 
+  
   ## Back ground color
   ## 
   ## @name scene.vwf#backgroundColor
